[project]
name = "agente-cobranca-langchain"
version = "0.1.0"
description = "Agente de cobrança utilizando LangChain"
requires-python = ">=3.11.9"

dependencies = [
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-openai==0.3.33",
    "psycopg2-binary==2.9.10",
    "streamlit==1.49.1",
    "python-dotenv==1.1.1"
]
